# GeoVeritas

./: pyproject.toml
.github/workflows/: pdoc.yml
src/geo_veritas/: __init__.py  __main__.py  datamodule.py  discriminator.py  gan.py  generator.py
