[project]
name = "geo-veritas"
version = "0.0.1"
authors = [
  { name="Vytautas Jancauskas", email="vytautas.jancauskas@dlr.de" },
]
description = "Fake remote sensing image detection"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pytest",
    "click",
    "pdoc",
    "numpy",
    "pandas",
    "scikit-learn",
]

[project.urls]
Homepage = "https://github.com/DLR-MF-DAS/GeoVeritas"
Issues = "https://github.com/DLR-MF-DAS/GeoVeritas/issues"
